# cairn

./: .gitignore  .gitmodules  README.md  WORKSPACE  requirements.in  requirements.txt
.github/workflows/: build.yml
compiler/: CAIRN_toP4.cpp  CAIRN_toP4.h  CMakeLists.txt  ExtractandLookaheadConversion.cpp  ExtractandLookaheadConversion.h  GlobalVariableReplacement.cpp  GlobalVariableReplacement.h  cairn.def  main.cpp  midend.h  options.h
compiler/testdata/: eth.p4  pass1.p4  pass1_multiparsernode.p4  pass2.p4  pass2notypecast.p4  pass2typecast.p4
docs/: compiler_design.md  specification.md
interpreter/: BUILD  README.md  config_parser.py  config_parser_test.py  datatypes.py  end_to_end_test.py  expression_parser.py  expression_parser_test.py  interp.py  interp_test.py  ir_parser.py  ir_parser_test.py
interpreter/test_files/: sample_config.json  simple_ip_config.json  simple_ip_parser.json  small_ir.json  small_ir_bin.json
p4c/: requirements.txt
tools/: build.sh  install-dependencies-ubuntu.sh
